Firefox Nightly 103 uses Windows accent color with no obvious way to turn it off
Categories
(Firefox :: Theme, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr91 | --- | unaffected |
firefox-esr102 | --- | unaffected |
firefox101 | --- | unaffected |
firefox102 | --- | unaffected |
firefox103 | --- | verified |
firefox104 | --- | verified |
People
(Reporter: github.com, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
3.32 KB,
image/png
|
Details | |
48 bytes,
text/x-phabricator-request
|
dmeehan
:
approval-mozilla-beta+
|
Details | Review |
Steps to reproduce:
Set a non-default Windows accent color (in my case, orange). Updated to Firefox Nightly 103.0a1.
Actual results:
Firefox now uses the WIndows accent color for its UI elements – active tab highlight, selection color, form items in websites,... This is ok on its own, but there doesn't seem to be a way to turn it off.
I can turn it off for the website form items by setting layout.css.accent-color.enabled
to false in about:config
. However, this does not affect the UI of the browser itself.
Expected results:
There should be a way to disable this or set a custom accent color, without having to install an extra extension.
Comment 1•2 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'WebExtensions::Untriaged' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
Comment 2•2 years ago
|
||
This appears to be a design change (Bug 1775310).
Could you try setting widget.windows.uwp-system-colors.enabled to false and restart your browser?
Updated•2 years ago
|
Comment 3•2 years ago
|
||
Set release status flags based on info from the regressing bug 1775310
Comment 4•2 years ago
|
||
:emilio, since you are the author of the regressor, bug 1775310, could you take a look?
For more information, please visit auto_nag documentation.
(In reply to Alice0775 White from comment #2)
This appears to be a design change (Bug 1775310).
Could you try setting widget.windows.uwp-system-colors.enabled to false and restart your browser?
Thanks, that fixes it. Not sure uwp-system-colors
is a good name for the option, given that this doesn't really have anything to do with UWP. Maybe something like widget.windows.system-accent-color.enabled
would be better?
Also, the requirement to restart Firefox is kinda unintuitive, I'd assume that most users trying to change this will toggle this option, see that it does not fix the issue, toggle it back and go looking somewhere else.
IMO the pref mentioned above should only affect Firefox when the selected theme is the default one, i.e. not when light, dark or any other custom theme is selected.
Assignee | ||
Comment 8•2 years ago
|
||
Yeah, we're on the soft freeze so will restore previous behavior for now. We can try to reland when we have a solution for grey-ish accents like bug 1776588, maybe.
(In reply to Itiel from comment #6)
IMO the pref mentioned above should only affect Firefox when the selected theme is the default one, i.e. not when light, dark or any other custom theme is selected.
Hmm, I don't see why. It doesn't in any other platform, and themes already have the mechanisms to customize the selection highlight colors in the Firefox UI (in fact many like Alpenglow do). I'd argue that it's a bit of a bug that we don't use the system accent color more in the default themes (and instead we mint this light blue in the dark theme for example), but that's a bit of a different conversation :-)
That said, Windows having grey accent colors exposed in their UI is a bit unfortunate, because they can cause confusion with stuff like disabled form controls. That said, that's an issue in native apps as well, presumably.
(In reply to a-n from comment #5)
Also, the requirement to restart Firefox is kinda unintuitive, I'd assume that most users trying to change this will toggle this option, see that it does not fix the issue, toggle it back and go looking somewhere else.
Yeah that's fair, it's trivial to fix too.
Assignee | ||
Comment 9•2 years ago
|
||
This basically pref-gates some of the accent-color changes that landed before
the soft-freeze to match current release behavior, at least for now.
In the future we might want to reconsider turning these on, but at the very
least we should figure out a good story for the grey-ish accent colors, see the
comments in the pref definitions.
The only tricky bit is the use-theme-accent pref handling. I made it specific
to the non-native-theme again so that AccentColor and NNT kept behaving
consistently, but AccentColor in the browser chrome used the real accent color.
Updated•2 years ago
|
Comment 10•2 years ago
|
||
Updated•2 years ago
|
Comment 11•2 years ago
|
||
Set release status flags based on info from the regressing bug 1775310
Assignee | ||
Comment 12•2 years ago
|
||
Comment on attachment 9282973 [details]
Bug 1776556 - Restore Windows' accent-color / system-color behavior for now. r=mstange,#layout
Beta/Release Uplift Approval Request
- User impact if declined: Windows system colors might be different.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: comment 0 and duplicate.
- List of other uplifts needed: none
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Mostly prefs off some code for now.
- String changes made/needed: none
- Is Android affected?: No
Assignee | ||
Updated•2 years ago
|
Comment 13•2 years ago
|
||
Comment 14•2 years ago
|
||
bugherder |
Updated•2 years ago
|
Comment 15•2 years ago
•
|
||
Comment on attachment 9282973 [details]
Bug 1776556 - Restore Windows' accent-color / system-color behavior for now. r=mstange,#layout
Approved for 103.0b3, thanks.
Comment 16•2 years ago
|
||
bugherder uplift |
Comment 17•2 years ago
|
||
Reproduced this issue on an affected Nightly build from 2022-06-25, on Windows 10 x64.
Verified as fixed on Firefox 103.0b3 (20220629123958 - treeherder build) and Firefox 104.0a1 (20220629070023) on Win 10.
Description
•